--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ a {
     transition: 0.4s;
 }
 
+#to_index_page{
+    color: black;
+}
+
 button {
     border: none;
     background: transparent;
@@ -118,7 +122,7 @@ a:hover {
     margin: 2em auto;
     display: grid;
     grid-template-columns: 2fr 0.7fr;
-    grid-template-rows: 7vh 60vh;
+    
     gap: 30px;
 }
 
@@ -431,12 +435,9 @@ div#cart {
     flex-direction: row;
 }
 
-#cart .grande ul li .btn img {
-    width: 100%;
-    padding: 0;
-}
-
 #cart .grande ul li .btn{
+    padding: 0;
+    font-size: 1.5em;
     border: none;
     background: transparent;
     cursor: pointer;
@@ -664,6 +665,15 @@ div#cart {
 
 /* responsive for smaller screens________________________________________________________________________________*/
 @media screen and (max-width: 1440px) {
+    .with_cart{
+        /* height: 80vh; */
+        width: 90%;
+        margin: 1em auto;
+        display: grid;
+        grid-template-columns: 1.8fr 1.2fr;
+        gap: 10px;
+    }
+
   div#products div.watches div {
     flex-direction: column;
 }
@@ -694,6 +704,9 @@ h5{
     border-radius: 50%;
     padding: 1px 5px;
     font-size: 0.7em;
+}
+div#products div.watches {
+    width: 30%;
 }
 
 body > footer {
@@ -791,7 +804,8 @@ input#searchBar {
     }
 
     div#cart {
-        margin: 0;
+        width: 80%;
+        margin: 10px auto;
         margin-bottom: 10%;
       }
 
@@ -847,7 +861,7 @@ input#searchBar {
     }
     
     /********MEDIA CARROUSEL********/
-    main {
+    .with_cart {
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
